--- a/Crystallum/Crystallum.csproj
+++ b/Crystallum/Crystallum.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Error\CrystallumError.cs" />
     <Compile Include="Model\Part.cs" />
     <Compile Include="Util\Formatter.cs" />
+    <Compile Include="Util\KristallParams.cs" />
     <Compile Include="View\MainView.cs" />
     <Page Include="UI\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
