--- a/Crystallum/Crystallum.csproj
+++ b/Crystallum/Crystallum.csproj
@@ -9,11 +9,12 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Crystallum</RootNamespace>
     <AssemblyName>Crystallum</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -57,12 +58,12 @@
     </ApplicationDefinition>
     <Compile Include="Error\CrystallumError.cs" />
     <Compile Include="Error\InvalidThicknessException.cs" />
-    <Compile Include="Model\Circle.cs" />
-    <Compile Include="Model\CircleGenerator.cs" />
+    <Compile Include="Model\Shape\Circle.cs" />
     <Compile Include="Model\GeneratorFactory.cs" />
-    <Compile Include="Model\Rect.cs" />
-    <Compile Include="Model\RectGenerator.cs" />
-    <Compile Include="Util\Formatter.cs" />
+    <Compile Include="Model\IGenerator.cs" />
+    <Compile Include="Model\NewGenerator.cs" />
+    <Compile Include="Model\OldGenerator.cs" />
+    <Compile Include="Model\Shape\Rect.cs" />
     <Compile Include="Util\Helpers.cs" />
     <Compile Include="Util\KristallParams.cs" />
     <Compile Include="View\MainView.cs" />
